--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,25 +1,22 @@
 .cover__title {
+  font-family: 'Inter', Arial, sans-serif;
   text-align: center;
   margin: 0 0 16px;
-}
-
-@media screen and (max-width: 1140px){
-  .cover__title {
-    max-width: 656px;
-  }
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
 }
 
 @media screen and (max-width: 984px){
-  .cover__title {
-    font-size: 72px;
-    line-height: 76px;
+  .section-title_size_medium {
+    font-size: 42px;
+    line-height: 46px;
   }
 }
 
 @media screen and (max-width: 640px){
-  .cover__title {
+  .section-title_size_medium {
     font-size: 32px;
     line-height: 35px;
-    margin: 0 0 8px;
   }
 }
