--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    max-width: 1280px;
 }
+
+@media all and (min-width:1280px) {
+    .footer {
+        margin: 0 auto;
+    }
+}
+
 
 @media all and (max-width:767px) {
     .footer {
