--- a/blocks/intro/__list-light/intro__list-light.css
+++ b/blocks/intro/__list-light/intro__list-light.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: Inter;
+    font-weight: 400;
     font-size: 12px;
     line-height: 18px;
     color: #FFFFFF;
