--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,28 @@
 .intro {
-    padding: 0 20px;
+    padding: 0 48px;
     margin: 0 auto;
+    margin-top: 92px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     max-width: 1000px;
+    margin-bottom: 92px;
 }
+
+@media all and (max-width:1023px) and (min-width:768px) {
+    .intro {
+        margin-top: 88px;
+        padding: 0 24px;
+        margin-bottom: 88px;
+    }
+}
+
+@media all and (max-width:767px) {
+    .intro {
+        margin-top: 64px;
+        padding: 0 16px;
+        margin-bottom: 64px;
+    }
+}
+
+
