--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,14 +1,21 @@
 .photo-grid {
-  margin: 92px 48px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
   max-width: 100%;
   gap:20px;
+  padding: 0 48px;
+  max-width: 1240px;
+}
+
+@media all and (min-width:1280px) {
+  .photo-grid {
+      margin: 0 auto;
+  }
 }
 
 @media all and (max-width:1024px) {
   .photo-grid {
-    margin: 92px 24px;
+    padding: 0 24px;
   }
 }
