--- a/blocks/place/__column/place__column.css
+++ b/blocks/place/__column/place__column.css
@@ -1,15 +1,24 @@
 .place__column {
     padding: 0;
     margin: 0 24px;
-    width: fit-content;
-    max-width: 460px;
+    max-width: 956px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
 }
 
 @media all and (max-width:767px) {
     .place__column {
-        max-width: 768px;
+        max-width: 780px;
         margin: 0;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+}
+
+@media all and (min-width:768px) and (max-width:1024px) {
+    .place__column {
+        justify-content: space-between;
     }
 }
