--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,28 @@
 .place__image {
     margin: 0;
     padding: 0;
-    width: 100%;
-    object-fit: cover;
+    margin-right: 40px;
     display: block;
+    max-width: 460px;
+}
+
+@media all and (max-width:767px) {
+    .place__image {
+        width: 100%;
+        max-width: 760px;
+        margin: 0;
+    }
+}
+
+@media all and (min-width:767px) and (max-width:1024px) {
+    .place__paragraph {
+        margin-right: 28px;
+    }
+}
+
+@media all and (min-width:1024px) and (max-width:1280px) {
+    .place__paragraph {
+        margin-right: 32px;
+        max-width: 460px;
+    }
 }
