--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,19 +1,20 @@
 .place__paragraph {
     padding: 0;
     margin: 0;
-    margin-top: 27px;
-    max-width: 460px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 163%;
     color:#FFF;
+    flex-direction: column;
+    max-width: 460px;
 }
 
-@media all and (max-width:1024px) {
+@media all and (min-width:767px) and (max-width:1024px) {
     .place__paragraph {
         font-size: 16px;
+
     }
 }
 
@@ -22,5 +23,6 @@
         margin: 0 16px;
         margin-top: 27px;
         max-width: 768px;
+        font-size: 16px;
     }
 }
