--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,9 +5,10 @@
     max-width: 460px;
     font-family: Inter;
     font-weight: 900;
-    font-size: 42px;
-    line-height: 46px;
+    font-size: 72px;
+    line-height: 76px;
     color:#FFF;
+    max-width: 460px;
 }
 
 @media all and (max-width:1024px) and (min-width:767px) {
@@ -21,7 +22,8 @@
     .place__title {
         font-size: 32px;
         line-height: 35px;
-        margin: 0 auto;
-        margin-bottom: 46px;
+        margin-bottom: 32px;
+        margin-left: 16px;
+        text-align: center;
     }
 }
