--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,8 +3,36 @@
     margin: 0;
     margin-bottom: 48px;
     display: flex;
-    flex-direction: column;
-    max-height: 45px;
+    flex-direction: column; 
     margin-top: 32px;
+    max-width: 460px;
+    margin-left: 28px;
 }
 
+@media all and (min-width:768px) and (max-width:1024px) {
+    .place__website {
+        margin-left: auto;
+    }
+}
+
+@media all and (min-width:1280px) {
+    .place__website {
+        margin-left: 40px;
+    }
+}
+
+@media all and (max-width:767px) {
+    .place__website {
+        margin: 0;
+        margin-top: 32px;
+        margin-bottom: 32px;
+    }
+    
+}
+
+@media all and (min-width:768px) {
+    .place__website {
+        width: 50%;
+        margin-left:auto;
+    }
+}
