--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,7 +4,7 @@
     margin: 80px 0;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 @media all and (max-width:767px) {
