--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,7 +3,18 @@
     max-width: 1000px;
     padding: 0;
     margin: 0 auto;
-    margin-top: 64px;
+    margin-top: 92px;
     margin-bottom: 90px;
 }
 
+@media all and (min-width:768px) and (max-width:1024px) {
+    .places {
+        margin-top: 88px;
+    }
+}
+
+@media all and (max-width:767px) {
+    .places {
+        margin-top: 64px;
+    }
+}
