--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,7 +5,7 @@
     display: block;
     max-width: 460px;
     object-fit: cover;
-    max-width: 50%;
+    width: 50%;
 }
 
 @media all and (max-width:767px) {
