--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,15 +7,9 @@
   line-height: 76px;
 }
 
-@media screen and (max-width: 984px){
-  .section-title_size_medium {
-    font-size: 42px;
-    line-height: 46px;
-  }
-}
 
-@media screen and (max-width: 640px){
-  .section-title_size_medium {
+@media all and (max-width: 767px){
+  .cover__title {
     font-size: 32px;
     line-height: 35px;
   }
