--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -17,3 +17,10 @@
         margin-bottom: 15px;
     }
 }
+
+@media all and (max-width:767px) {
+    .place__url-heading {
+        margin: 0;
+        margin-bottom: 12px;
+    }
+}
