--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -30,3 +30,12 @@
         margin-bottom: 32px;
     }
 }
+
+@media all and (max-width:767px) {
+    .place__website {
+        margin: 0;
+        margin-left: 16px;
+        margin-top: 32px;
+        margin-bottom: 32px;
+    }
+}
