--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -21,8 +21,8 @@
     .place__title {
         font-size: 32px;
         line-height: 35px;
-        margin-bottom: 32px;
         margin-left: 16px;
+        margin-bottom: 0;
         text-align: center;
     }
 }
