--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,11 +5,13 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
+  max-width: 60%;
 }
 
 
 @media all and (max-width: 767px){
   .cover__title {
+    max-width: none;
     font-size: 32px;
     line-height: 35px;
   }
