--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,12 +6,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    max-width: 1280px;
+    max-width: 1184px;
 }
 
 @media all and (min-width:1280px) {
     .footer {
-        margin: 0 auto;
+        margin: 90px auto;
+        margin-bottom: 0;
     }
 }
 
