--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,15 +1,17 @@
 .cover {
-  font-family: 'Inter', Arial, sans-serif;
   max-width: 1200px;
   margin: 92px auto;
-  margin-bottom: 0;
 }
 
-@media all and (max-width:1024px) {
+@media all and (max-width:1024px) and (min-width:768px) {
   .cover {
     margin: 88px auto;
-    margin-bottom: 0;
     margin-bottom: 97px;
   }
 }
 
+@media all and (max-width:767px) {
+  .cover {
+    margin: 64px auto;
+  }
+}
