--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,6 @@
 .footer__link {
-    margin: 0 18px;
-    font-family: Inter;
+    margin: 0;
+    margin-right: 18px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -11,7 +11,7 @@
     transition-timing-function: linear;
     text-decoration-line: none;
 }
- 
+
 .footer__link:hover {
     opacity: 0.8;
 }
@@ -19,8 +19,9 @@
 @media all and (max-width:767px) {
     .footer__link {
         margin: 16px 0;
+        margin-left: 16px;
         font-size: 24px;
         line-height: 24px;
     }
-    
+
 }
