--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,11 +1,11 @@
 .header__lang-link {
     margin: 0 9px;
-    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
     color: white;
+    text-decoration-line: none;
     transition-property: opacity;
     transition-duration: 0.6s;
     transition-timing-function: linear;
