--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,14 +3,6 @@
     width: 100%;
     padding: 0;
     margin: 0;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial', sans-serif;
 }
 
-.h1, h2, h3, h4, h5, h6, p, a {
-    font-family: 'Inter';
-}
-
-.p {
-    margin: 0;
-    padding: 0;
-}
