--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -16,15 +16,8 @@
     }
 }
 
-@media all and (min-width:767px) and (max-width:1024px) {
-    .place__paragraph {
-        margin-right: 28px;
-    }
-}
-
-@media all and (min-width:1024px) and (max-width:1280px) {
-    .place__paragraph {
-        margin-right: 32px;
-        max-width: 460px;
+@media all and (min-width:768px) {
+    .place__image {
+        width:50%;
     }
 }
