--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,28 +1,33 @@
 .place__paragraph {
-    padding: 0;
     margin: 0;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 163%;
-    color:#FFF;
+    padding: 0;
     flex-direction: column;
     max-width: 460px;
 }
 
 @media all and (min-width:767px) and (max-width:1024px) {
     .place__paragraph {
-        font-size: 16px;
-
+        margin-right: 28px;
     }
 }
 
 @media all and (max-width:767px) {
     .place__paragraph {
         margin: 0 16px;
-        margin-top: 27px;
+        margin-top: 32px;
         max-width: 768px;
-        font-size: 16px;
+    }
+}
+
+@media all and (min-width:1024px) and (max-width:1280px) {
+    .place__paragraph {
+        margin-right: 32px;
+        max-width: 460px;
+    }
+}
+
+@media all and (min-width:768px) {
+    .place__paragraph {
+        width:50%;
     }
 }
