--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     margin-bottom: 46px;
-    font-family: Inter;
+    margin-right: 40px;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -17,12 +17,18 @@
     }
 }
 
-@media all and (max-width:767px) {  
+@media all and (max-width:767px) {
     .place__title {
         font-size: 32px;
         line-height: 35px;
         margin-left: 16px;
-        margin-bottom: 0;
         text-align: center;
+    }
+}
+
+@media all and (min-width:768px) {
+    .place__title {
+        align-self: flex-end;
+        width: 50%;
     }
 }
