--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -10,12 +10,6 @@
 
 }
 
-@media all and (min-width:768px) and (max-width:1024px) {
-    .place__website {
-        margin-left: auto;
-    }
-}
-
 @media all and (min-width:1280px) {
     .place__website {
         margin-left: 40px;
@@ -24,10 +18,11 @@
 
 @media all and (min-width:768px) {
     .place__website {
+        align-self: flex-end;
         width: 50%;
         margin-left:auto;
-        margin-top: 32px;
         margin-bottom: 32px;
+
     }
 }
 
@@ -35,7 +30,6 @@
     .place__website {
         margin: 0;
         margin-left: 16px;
-        margin-top: 32px;
         margin-bottom: 32px;
     }
 }
